Java code clean up